RESOLVED FIXED81870
REGRESSION (r111635): Assertion failure in RenderFlexibleBox::layoutFlexItems() (!lineContexts.size()) in many flexbox tests
https://bugs.webkit.org/show_bug.cgi?id=81870
Summary REGRESSION (r111635): Assertion failure in RenderFlexibleBox::layoutFlexItems...
mitz
Reported 2012-03-21 21:35:58 PDT
After <http://trac.webkit.org/r111635>, the fix for bug 81843, many css3/flexbox tests are crashing because of an assertion failure in RenderFlexibleBox::layoutFlexItems(). For example, css3/flexbox/flex-align-stretch.html.
Attachments
mitz
Comment 1 2012-03-21 21:58:53 PDT
Fixed by reverting r111635 in <http://trac.webkit.org/r111652>.
Tony Chang
Comment 2 2012-03-22 09:43:11 PDT
Sorry, thanks for reverting.
Tony Chang
Comment 3 2012-03-22 09:50:07 PDT
*** Bug 81872 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.