REGRESSION (r111635): Assertion failure in RenderFlexibleBox::layoutFlexItems() (!lineContexts.size()) in many flexbox tests https://bugs.webkit.org/show_bug.cgi?id=81870

Reverted r111635, the fix for bug 81843.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::WrapReverseContext::WrapReverseContext):
(WebCore::RenderFlexibleBox::WrapReverseContext::addCrossAxisOffset):
(RenderFlexibleBox::WrapReverseContext):
(WebCore::RenderFlexibleBox::WrapReverseContext::addNumberOfChildrenOnLine):
(WebCore::RenderFlexibleBox::WrapReverseContext::lineCrossAxisDelta):
(WebCore::RenderFlexibleBox::layoutFlexItems):
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
(WebCore::RenderFlexibleBox::alignChildren):
(WebCore::RenderFlexibleBox::flipForWrapReverse):
* rendering/RenderFlexibleBox.h:



Canonical link: https://commits.webkit.org/99150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111652 268f45cc-cd09-0410-ab3c-d52691b4dbfc